add /-/status endpoint
